--- a/.frontmatter.yml
+++ b/.frontmatter.yml
@@ -25,8 +25,8 @@ content:
             description: Unique project identifier.
             required: true
             pattern:
-              regex: "^[a-z0-9-]+$"
-              message: "Use lowercase letters, numbers, and dashes."
+              regex: ^[a-z0-9-]+$
+              message: Use lowercase letters, numbers, and dashes.
           - name: title
             type: string
             label: Title
@@ -49,7 +49,7 @@ content:
                 label: Color
                 description: Hex color for the badge.
                 pattern:
-                  regex: "^#([A-Fa-f0-9]{6})$"
+                  regex: ^#([A-Fa-f0-9]{6})$
                   message: "Use a 6-digit hex color like #7b42bc."
       - name: blogs
         type: object
@@ -63,8 +63,8 @@ content:
             label: ID
             required: true
             pattern:
-              regex: "^[a-z0-9-]+$"
-              message: "Use lowercase letters, numbers, and dashes."
+              regex: ^[a-z0-9-]+$
+              message: Use lowercase letters, numbers, and dashes.
           - name: title
             type: string
             label: Title
@@ -93,8 +93,8 @@ content:
             label: Day
             required: true
             pattern:
-              regex: "^[0-9]{2}$"
-              message: "Use a two-digit day like 00, 01, 30."
+              regex: ^[0-9]{2}$
+              message: Use a two-digit day like 00, 01, 30.
           - name: title
             type: string
             label: Title
@@ -115,8 +115,8 @@ content:
             label: ID
             required: true
             pattern:
-              regex: "^[a-z0-9-]+$"
-              message: "Use lowercase letters, numbers, and dashes."
+              regex: ^[a-z0-9-]+$
+              message: Use lowercase letters, numbers, and dashes.
           - name: title
             type: string
             label: Title
@@ -134,5 +134,5 @@ content:
             label: Link
             required: true
             pattern:
-              regex: "^(https?:\\/\\/|\\/).+"
-              message: "Use a full URL or a site-relative path."
+              regex: ^(https?:\/\/|\/).+
+              message: Use a full URL or a site-relative path.
