--- a/.frontmatter.yml
+++ b/.frontmatter.yml
@@ -1,97 +1,265 @@
 media:
-  - name: content-images
-    label: images
-    input: content/images
-    output: /content/images
-    extensions:
-      - jpg
-      - jpeg
-      - png
-      - webp
-      - gif
-      - svg
-components: {}
+  input: content/images
+  output: /content/images
+
 content:
-  - name: data
-    label: data.json
+  - name: blog_content
+    label: Blog Content (content/posts)
+    type: collection
+    path: content/posts
+    format: yaml-frontmatter
+    fields:
+      - name: title
+        label: Title
+        type: string
+      - name: date
+        label: Date
+        type: date
+      - name: category
+        label: Category
+        type: string
+      - name: description
+        label: Description
+        type: text
+      - name: draft
+        label: Draft
+        type: boolean
+      - name: body
+        label: Body
+        type: text
+    exclude:
+      - terraform-30/readme.md
+      - terraform-30/template.md
+
+  - name: challenge_content
+    label: Challenge Content (content/posts/terraform-30)
+    type: collection
+    path: content/posts/terraform-30
+    format: yaml-frontmatter
+    fields:
+      - name: day
+        label: Day
+        type: string
+      - name: title
+        label: Title
+        type: string
+      - name: status
+        label: Status
+        type: select
+        options:
+          values:
+            - value: completed
+              label: Completed
+            - value: In Progress
+              label: In Progress
+            - value: locked
+              label: Locked
+            - value: active
+              label: Active
+      - name: draft
+        label: Draft
+        type: boolean
+      - name: body
+        label: Body
+        type: text
+    exclude:
+      - readme.md
+      - template.md
+
+  - name: project_content
+    label: Project Content (content/projects)
+    type: collection
+    path: content/projects
+    format: yaml-frontmatter
+    fields:
+      - name: title
+        label: Title
+        type: string
+      - name: description
+        label: Description
+        type: text
+      - name: draft
+        label: Draft
+        type: boolean
+      - name: link
+        label: Link
+        type: string
+      - name: badges
+        label: Badges
+        type: object
+        list: true
+        fields:
+          - name: name
+            label: Name
+            type: string
+          - name: color
+            label: Color
+            type: string
+      - name: body
+        label: Body
+        type: text
+
+  - name: projects
+    label: Projects
     type: file
     path: data.json
     format: json
+    view:
+      primary: title
     fields:
-      - name: title
-        type: string
-        required: true
-      - name: description
-        type: string
-      - name: date
-        type: date
-      - name: author
-        type: string
-      - name: tags
-        type: string
+      - name: projects
+        label: Projects
+        type: object
         list: true
-      - name: category
-        type: string
-  - name: content-posts
-    label: content/posts
-    type: collection
-    path: content/posts
-    filename: "{year}-{month}-{day}-{primary}.md"
-    format: yaml-frontmatter
+        fields:
+          - name: id
+            label: ID
+            type: string
+          - name: title
+            label: Title
+            type: string
+          - name: description
+            label: Description
+            type: text
+          - name: link
+            label: Link
+            type: string
+          - name: badges
+            label: Badges
+            type: object
+            list: true
+            fields:
+              - name: name
+                label: Name
+                type: string
+              - name: color
+                label: Color
+                type: string
+
+  - name: blogs
+    label: Blog Posts
+    type: file
+    path: data.json
+    format: json
+    view:
+      primary: title
     fields:
-      - name: title
-        type: string
-        required: true
-      - name: description
-        type: string
-      - name: date
-        type: date
-      - name: author
-        type: string
-      - name: tags
-        type: string
+      - name: blogs
+        label: Blog Posts
+        type: object
         list: true
-      - name: category
-        type: string
-  - name: content-posts-terraform-30
-    label: content/posts/terraform-30
-    type: collection
-    path: content/posts/terraform-30
-    filename: "{year}-{month}-{day}-{primary}.md"
-    format: yaml-frontmatter
+        fields:
+          - name: id
+            label: ID
+            type: string
+          - name: title
+            label: Title
+            type: string
+          - name: date
+            label: Date
+            type: date
+          - name: category
+            label: Category
+            type: string
+          - name: description
+            label: Description
+            type: text
+
+  - name: terraform_challenge
+    label: Terraform Challenge
+    type: file
+    path: data.json
+    format: json
+    view:
+      primary: title
     fields:
-      - name: title
-        type: string
-        required: true
-      - name: description
-        type: string
-      - name: date
-        type: date
-      - name: author
-        type: string
-      - name: tags
-        type: string
+      - name: terraform_challenge
+        label: Challenge Items
+        type: object
         list: true
-      - name: category
-        type: string
-  - name: content-projects
-    label: content/projects
-    type: collection
-    path: content/projects
-    filename: "{year}-{month}-{day}-{primary}.md"
-    format: yaml-frontmatter
+        fields:
+          - name: day
+            label: Day
+            type: string
+          - name: title
+            label: Title
+            type: string
+          - name: status
+            label: Status
+            type: select
+            options:
+              values:
+                - value: completed
+                  label: Completed
+                - value: In Progress
+                  label: In Progress
+                - value: locked
+                  label: Locked
+                - value: active
+                  label: Active
+
+  - name: aiops_challenge
+    label: AIOps Challenge
+    type: file
+    path: data.json
+    format: json
+    view:
+      primary: title
     fields:
-      - name: title
-        type: string
-        required: true
-      - name: description
-        type: string
-      - name: date
-        type: date
-      - name: author
-        type: string
-      - name: tags
-        type: string
+      - name: aiops_challenge
+        label: Challenge Items
+        type: object
         list: true
-      - name: category
-        type: string
+        fields:
+          - name: day
+            label: Day
+            type: string
+          - name: title
+            label: Title
+            type: string
+          - name: status
+            label: Status
+            type: select
+            options:
+              values:
+                - value: completed
+                  label: Completed
+                - value: In Progress
+                  label: In Progress
+                - value: locked
+                  label: Locked
+                - value: active
+                  label: Active
+
+  - name: resources
+    label: Resources
+    type: file
+    path: data.json
+    format: json
+    view:
+      primary: title
+    fields:
+      - name: resources
+        label: Resources
+        type: object
+        list: true
+        fields:
+          - name: id
+            label: ID
+            type: string
+          - name: title
+            label: Title
+            type: string
+          - name: description
+            label: Description
+            type: text
+          - name: category
+            label: Category
+            type: string
+          - name: link
+            label: Link
+            type: string
+
+settings:
+  content:
+    merge: true
